# xabo

./: .gitignore  README.md  pyproject.toml  scratch.py  scratch_2.py
latex/background/: acronyms.tex  main.tex
latex/habo/: acronyms.tex  main.tex
latex/habo/figures/: adjacent_source_dag.tex  alternative_dag.tex  alternative_example_dag.tex  auto_dag.tex  linear.tex  xfc_forrester.tex
latex/habo/references/: GPS.bib
latex/shared/: general.sty
latex/template/: main.tex
notebooks/xabo/: 01_exact_gp.ipynb
src/bench/functions/: __init__.py  _forrester.py
src/utils/: plotting.py
src/xabo/: __init__.py  _config.py
src/xabo/core/: __init__.py  _types.py
src/xabo/core/constraints/: __init__.py  _constraints.py
src/xabo/core/gp/: __init__.py  _exact.py  _types.py
src/xabo/core/kernel/: __init__.py  _kernel.py  _matern12.py  _matern32.py  _matern52.py  _se.py  _types.py
src/xabo/core/mean/: __init__.py  _mean.py  _types.py  _zero.py
src/xabo/core/model/: _decorators.py  _model.py
src/xabo/core/parameters/: _parameter.py
src/xabo/core/prior/: __init__.py  _halfnormal.py  _lognormal.py  _noprior.py  _normal.py  _prior.py  _types.py
src/xabo/core/priors/: _prior.py  _types.py
src/xabo/core/spec/: __init__.py  _default.py  _model.py  _parameter.py  _params_structure.py  _spec.py  _state.py  _transform.py  _tree.py
src/xabo/core/transform/: __init__.py  _identity.py  _log.py  _transform.py
src/xabo/core/typing/: __init__.py  _typecheck.py
tests/: conftest.py
tests/gp/: test_exact_gp.py
tests/kernel/: _cases.py  _decorators.py  case.py  test_kernel.py
tests/kernels/: test_kernels.py
tests/shared/: __init__.py  _kernels.py
tests/test_xabo/kernel/: _cases.py  _decorators.py  conftest.py  generate_fixtures.py  test_kernel.py
tests/test_xabo/kernel/fixtures/: kernel_expected.npz
tests/test_xabo/shared/: __init__.py  _kernels.py  _means.py
