[project]
name = "xabo"
version = "0.1.0"
description = "Context aware machine learning in python"
readme = "README.md"
authors = [{ name = "JWSchaefer", email = "joe.w.schaefer@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "beartype>=0.22.9",
  "jax>=0.8.2",
  "jaxtyping>=0.3.4",
  "networkx>=3.6.1",
  "polars>=1.36.1",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "matplotlib>=3.10.7",
  "pytest>=9.0.2",
  "ruff>=0.14.4",
]

[tool.xabo]
# runtime_typechecking = true


[tool.hatch.build.targets.wheel]
packages = ["src/xabo"]

[tool.pytest]
addopts = ["-ra", "-rP"]
testpaths = ["tests"]

[tool.ruff]

[tool.ruff.lint]
ignore = [
  "F722", # Forward annotation syntax (jaxtyping shape strings)
  "F821", # Undefined name (e.g. "D" in jaxtyping)
]
