[project]
name = "xabo"
version = "0.1.0"
description = "Context aware machine learning in python"
readme = "README.md"
authors = [{ name = "JWSchaefer", email = "joe.w.schaefer@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "beartype>=0.22.9",
  "jax>=0.8.2",
  "jaxtyping>=0.3.4",
  "networkx>=3.6.1",
  "optax>=0.2.6",
  "polars>=1.36.1",
  "trellis",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "jaxopt>=0.8.5",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.7",
  "notebook>=7.5.2",
  "pytest>=9.0.2",
  "ruff>=0.14.4",
]

[tool.xabo]
runtime_typechecking = true


[tool.hatch.build.targets.wheel]
packages = ["src/xabo"]

[tool.pytest.ini_options]
addopts = ["-s", "-ra", "-rP"]
testpaths = ["tests"]

[tool.ruff]

[tool.ruff.lint]
ignore = [
  "F722", # Forward annotation syntax (jaxtyping shape strings)
  "F821", # Undefined name (e.g. "D" in jaxtyping)
]

[tool.pyright]
reportInvalidTypeForm = false       # Forward refs to metaclass-generated types
reportGeneralTypeIssues = "warning" # Downgrade to warning instead of error

[tool.uv.sources]
trellis = { path = "../trellis", editable = true }
